--- a/hello.html
+++ b/hello.html
@@ -3,14 +3,16 @@
   <head>
      <title>The Barbie Website!!!!!!!!</title>
       <link rel="stylesheet" href="stylesheet.css">
+      <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-     <h1> Hi! I'm Barbie. </h1>
-     <h2> Welcome to The Barbie Website </h2>
-     <p> I'm a barbie girl in a barbie wOOoorld, Life in plastic, It's fantastic! </p>
+     <h1 class="barb"> Hi! I'm Barbie. </h1>
+     <h2 id="pineapple"> Welcome to The Barbie Website </h2>
+     <p class="barb "> I'm a barbie girl in a barbie wOOoorld, Life in plastic, It's fantastic! </p>
      <img width="400" length="500" src="https://hips.hearstapps.com/hmg-prod/images/actress-margot-robbie-attends-a-press-conference-for-barbie-news-photo-1688389163.jpg"></img>
-     <h2>Wanna learn more about Barbie?</h2>
+     <h2 class="barb">Wanna learn more about Barbie?</h2>
      <a href="https://en.wikipedia.org/wiki/Barbie"> Click Here!</a>
+     <button onclick="changeBackgroundColor('lightpink')">Change BG Color</button>
 
   </body>
 </html> 
